# ferrishare

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  main.css  main.tw.css  package-lock.json  package.json  tailwind.config.js
favicon/: README.md  generate_icons.sh
font/: README.md
migrations/: 20241110162929_uploaded_files.sql  20241110162929_users.sql  20241114230309_admin_sessions.sql  20241114230309_sessions.sql
src/: admin.rs  auto_cleanup.rs  config.rs  delete.rs  download.rs  error_handling.rs  ip_prefix.rs  main.rs  upload.rs
static/font/: MaterialSymbolsRounded.css  README.md
templates/: admin.html  admin_link.html  admin_login.html  admin_overview.html  base.html  common.js  download.html  download.js  full_quota.html  index.html  legal_notice_stub.html  privacy_policy_default.html  upload.html  upload.js  uploadscript.js
