[package]
name = "ferrishare"
version = "1.1.1"
authors = ["Tobias Marschner <contact@tobiasm.dev>"]
edition = "2021"
description = "Simple, self-hostable filesharing application with builtin end-to-end encryption"
readme = "README.md"
repository = "https://github.com/TobiasMarschner/ferrishare"
license = "MIT"

[dependencies]
axum = { version = "0", features = ["http2", "multipart", "query", "macros", "tracing"] }
axum-extra = { version = "0", features = ["cookie"]}
itertools = "0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0" }
tower = { version = "0", features = ["util"] }
tower-http = { version = "0", features = [ "fs", "compression-full", "trace", "timeout" ] }
tracing = { version = "0" }
tracing-subscriber = { version = "0", features = ["env-filter"] }
anyhow = { version = "1" }
tera = "1"
minify-html = "0"
cookie = { version = "0" }
sqlx = { version = "0", features = [ "runtime-tokio", "sqlite" ] }
chrono = { version = "0" }
rand = { version = "0" }
base64 = { version = "0" }
sha2 = { version = "0" }
argon2 = { version = "0" }
inquire = "0.7.5"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
toml = "0.8.19"
hex = "0.4.3"
